# mathwarp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt
src/hellolib/: CMakeLists.txt
src/mathwarp/: CMakeLists.txt
src/mathwarp-core/: CMakeLists.txt
src/mathwarp-core/include/: evaluation.h
src/mathwarp-core/src/: evaluation.cpp
src/mathwarp-core/test/: hellolib_test.cpp
src/mathwarp-repl/: CMakeLists.txt
src/mathwarp-repl/include/: terminal_shell.h
src/mathwarp-repl/src/: main.cpp
src/mathwarp/src/: mathwarp.cpp
